MB-58352: 2/3 Update MagmaKVStore to use new HLC API

This change is linked to a magma API change. The magma
GetHistoryTimeNow callback now returns an optional<seconds> so
it can express the case when no time could be determined.

When getVBucketHlcNow returns std::nullopt getHistoryTimeNow
returns std::nullopt, and the corresponding magma change can
avoid incorrectly discarding history data.

Change-Id: Ib5010c226406957c94ea5914ad643113c8bca6c6
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/195976
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>